Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4718142a.out
T4718142a.java:18:21: compiler.err.var.might.be.assigned.in.loop: i
1 error
